--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <body>
         <component>
         </component>
-        <text></text>
+        <text binding="hello"></text>
     </body>
 </html>
